# ttutil

./: .gitignore  README.md  cross_mingw.txt  meson.build  pixi.toml
.github/workflows/: build-library.yml  ci.yaml
src/: diagnostics.diag  fopengstandard.f90  getun.for  getun2.for  my_compile_ttutil.sh  rddata.for  rdmachin.inc  rdtblinf.inc  rdtmp1.for  usedun.for  ver4_27.for
